Update LESS to ensure scripts tags aren't visible
Our CSS rules that affect the display property of all children have
the side effect of making the content of script tags visible.
Per the conversation at
http://forums.enyojs.com/discussion/1882/mathjax-rendering-on-onyx-buttons-and-picker-s,
this is a problem when using MathJax with Onyx, as it relies on inserting
hidden script tags with MathML content into the DOM.

Enyo-DCO-1.1-Signed-Off-By: Ben Combee (ben.combee@lge.com)

--- a/css/Groupbox.less
+++ b/css/Groupbox.less
@@ -15,6 +15,11 @@
 	font-size: @onyx-groupbox-font-size;
 }
 
+/* needed for MathJax support */
+.onyx-groupbox > script {
+	display: none;
+}
+
 .onyx-groupbox > *:first-child {
 	border-top-color: #aaaaaa;
 	border-width: 1px;
