--- a/css/ProgressButton.less
+++ b/css/ProgressButton.less
@@ -31,3 +31,8 @@
 .onyx-progress-button-client > * {
 	display: inline-block;
 }
+
+/* needed for MathJax support */
+.onyx-progress-button-client > script {
+	display: none;
+}
